# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(koala_mr)) {
  # OHOS build tree workaround
  import("../../koala_integration.gni")
}
if (!koala_mr.is_rri) {
  import("//build/config/components/ets_frontend/ets2abc_config.gni")
  import("//build/ohos.gni")
}
import("${koala_mr.root_path}/gn/import/npm.gni")

ws_node_modules_dir = koala_mr.root_path + "/node_modules"

# install panda sdk
if (!koala_mr.is_rri) {
  action("panda_sdk_run") {
    script = "gn/command/gen_sdk.py"

    _panda_sdk_dir = "$target_out_dir/panda-sdk"
    _sdk_dir = "$target_out_dir/sdk"

    outputs = [
      _sdk_dir,
      _panda_sdk_dir
    ]

    external_deps = [ ets2abc_build_deps ]
    external_deps += [ static_linker_build_deps ]
    external_deps += [ "ets_frontend:libes2panda_public(${host_toolchain})" ]

    args = [
      "--config",
      rebase_path("gn/sdk_config.json"),
      "--src",
      rebase_path("//"),
      "--dist",
      rebase_path(_sdk_dir),
      "--out-root",
      rebase_path(root_out_dir),
      "--current-os",
      current_os,
      "--current-cpu",
      current_cpu,
      "--output",
      rebase_path(_panda_sdk_dir),
    ]
  }

  ohos_prebuilt_etc("panda_sdk") {
    deps = [ ":panda_sdk_run" ]
    target_outputs = get_target_outputs(":panda_sdk_run")
    source = target_outputs[0]
    install_enable = false
    subsystem_name = "developtools"
    part_name = "ace_ets2bundle"
  }
} else {
  npm_cmd("panda_sdk") {
    project_path = rebase_path(".")
    run_tasks = [ "panda:sdk:reinstall" ]
  }
}

if (!koala_mr.is_rri) {
  # Use from OHOS-SDK build (//build/ohos/sdk/ohos_sdk_description_std.json)
  ohos_copy("libarkts-sdk") {
    deps = [ ":libarkts_sdk_copy" ]

    _libarkts_source_dir = rebase_path("$target_gen_dir")
    _libarkts_output_dir = target_out_dir + "/$target_name"

    sources = [ _libarkts_source_dir ]
    outputs = [ _libarkts_output_dir ]
    module_source_dir = _libarkts_output_dir
    module_install_name = ""
    subsystem_name = "developtools"
    part_name = "ace_ets2bundle"
  }
}

# special target to produce bridges.cpp to output directory, so es2panda_lib can depend on this file
action("regenerate") {
  script = "gn/command/copy_file.py"
  generated_source = "//developtools/ace_ets2bundle/ets1.2/libarkts"
  inputs = [ generated_source ]
  outputs = [ "$target_out_dir/bridges.cpp" ]
  args = [
    rebase_path("generated/native/bridges.cpp", root_build_dir),
    rebase_path(outputs[0], root_build_dir),
  ]
  deps = [ ":regenerate:arktscgen(${host_toolchain})" ]
}

if (current_toolchain == host_toolchain) {
  npm_cmd("regenerate:arktscgen") {
    deps = [ ":panda_sdk" ]
    project_path = rebase_path(".")
    run_tasks = [ "regenerate" ]
    panda_sdk_path = rebase_path("$target_out_dir/sdk")
  }

  npm_cmd("compile") {
    deps = [
      ":regenerate",
      "${koala_mr.root_path}/interop:interop_compile",
    ]
    project_path = rebase_path(".")
    run_tasks = [ "compile:js" ]
  }
}

shared_library("es2panda_lib") {
  if (defined(is_arkui_x) && is_arkui_x) {
    deps = [
      "//arkcompiler/ets_frontend/es2panda:es2panda",
      "//third_party/bounds_checking_function:libsec_static",
    ]
  } else if (!koala_mr.is_rri) {
    external_deps = [
      "bounds_checking_function:libsec_static",
      "ets_frontend:ets2panda",
    ]
  }

  output_dir = rebase_path(root_out_dir + "/libarkts")

  sources = [
    "${koala_mr.root_path}/interop/src/cpp/common-interop.cpp",
    "${koala_mr.root_path}/interop/src/cpp/interop-logging.cpp",
    "${koala_mr.root_path}/interop/src/cpp/napi/convertors-napi.cpp",
    "${koala_mr.root_path}/libarkts/native/src/bridges.cpp",
    "${koala_mr.root_path}/libarkts/native/src/common.cpp",
    "${koala_mr.root_path}/libarkts/native/src/memoryTracker.cpp",
  ]

  include_dirs = [
    "$target_out_dir/sdk/ohos_arm64/include/tools/es2panda/public",
    "$target_out_dir/sdk/ohos_arm64/include/tools/es2panda",
    "${koala_mr.root_path}/libarkts/native/src",
    "${koala_mr.root_path}/interop/src/cpp",
    "${koala_mr.root_path}/interop/src/cpp/napi",
    "${koala_mr.root_path}/interop/src/cpp/types",
    "$ws_node_modules_dir/node-api-headers/include",
    "$ws_node_modules_dir/node-addon-api",
  ]

  defines = [
    "KOALA_INTEROP_MODULE=NativeModule",
    "INTEROP_LIBRARY_NAME=es2panda",
    "KOALA_USE_NODE_VM",
    "KOALA_NAPI",
  ]

  if (!koala_mr.is_rri) {
    defines += [ "IS_OHOS" ]
    defines += [ "USE_LIBSEC" ]
  }

  deps = [
    ":regenerate",
    ":panda_sdk_run",
  ]
  sources += get_target_outputs(deps[0])

  if (!koala_mr.is_rri) {
    configs -= [ "//build/config/compiler:compiler" ]
  }

  if (is_mac) {
    cflags_cc = [
      "-std=c++17",
      "-Wall",
      "-Werror",
      "-Wno-unused-variable",
      "-fPIC",
    ]

    ldflags = [
      "-fPIC",
      "-Wl,-undefined,dynamic_lookup",
      "-fuse-ld=lld",
      "-Wl,--icf=all",
      "-Wl,--color-diagnostics",
      "-m64",
    ]
    defines += [ "KOALA_MACOS" ]
    output_extension = "node"
  }

  if (is_linux) {
    cflags_cc = [
      "-std=c++17",
      "-Wall",
      "-Werror",
      "-Wno-unused-command-line-argument",
      "-Wno-unused-variable",
      "-fPIC",
    ]

    ldflags = [
      "-Wl,--allow-shlib-undefined",
      "-Wl,--fatal-warnings",
      "-Wl,--build-id=md5",
      "-fPIC",
      "-Wl,-z,noexecstack",
      "-Wl,-z,now",
      "-Wl,-z,relro",

      # "-Wl,-z,defs", # must no use this option
      "-Wl,--as-needed",
      "-fuse-ld=lld",
      "-Wl,--icf=all",
      "-Wl,--color-diagnostics",
      "-m64",
    ]
    defines += [ "KOALA_LINUX" ]
    output_extension = "node"
  } else if (current_os == "mingw") {
    cflags_cc = [
      "-std=c++17",
      "-Wall",
      "-Werror",
      "-Wno-unused-variable",
      "-Wno-unused-command-line-argument",
      "-fPIC",
      "-Wno-error=deprecated-copy",
      "-enable-trivial-auto-var-init-zero-knowing-it-will-be-removed-from-clang",
      "-ftrivial-auto-var-init=zero",
      "-fcolor-diagnostics",
      "-fmerge-all-constants",
      "-Xclang",
      "-mllvm",
      "-Xclang",
      "-instcombine-lower-dbg-declare=0",
      "-no-canonical-prefixes",
      "-fuse-ld=lld",
      "-fno-stack-protector",
      "-fno-strict-aliasing",
      "-Wno-builtin-macro-redefined",
      "-fms-extensions",
      "-static",
      "-rtlib=compiler-rt",
      "-stdlib=libc++",
      "-lunwind",
      "-lpthread",
      "-Qunused-arguments",
      "-target",
      "x86_64-pc-windows-gnu",
      "-D__CUSTOM_SECURITY_LIBRARY",
    ]

    ldflags = [
      "-Wl,--fatal-warnings",
      "-fPIC",
      "-Wl,--as-needed",
      "-fuse-ld=lld",
      "-Wl,--icf=all",
      "-m64",
      "-static",
      "-rtlib=compiler-rt",
      "-stdlib=libc++",
      "-std=c++17",
      "-lunwind",
      "-lpthread",
      "-Qunused-arguments",
      "-target",
      "x86_64-pc-windows-gnu",
    ]
    output_extension = "dll"
    defines += [ "KOALA_WINDOWS" ]
    sources +=
        [ "${koala_mr.root_path}/interop/src/cpp/napi/win-dynamic-node.cpp" ]
  }
}

action("es2panda_lib_copy") {
  script = "gn/command/copy.py"
  if (defined(build_ohos_sdk) && build_ohos_sdk) {
    deps = [ ":es2panda_lib" ]
    from_path = root_out_dir
  } else {
    deps = [ ":es2panda_lib(${host_toolchain})" ]
    if (host_toolchain != current_toolchain) {
      toolchain_parts = string_split(host_toolchain, ":")
      from_path = "$root_out_dir/${toolchain_parts[1]}"
    } else {
      from_path = root_out_dir
    }
  }

  libarkts_source = "//developtools/ace_ets2bundle/ets1.2/libarkts"
  _libarkts_es2panda_node = "$target_out_dir/es2panda.node"

  inputs = [ libarkts_source ]
  outputs = [ _libarkts_es2panda_node ]
  args = [
    "--from-path",
    rebase_path(from_path + "/libarkts"),
    "--to-path",
    rebase_path("."),
    "--output-path",
    rebase_path(_libarkts_es2panda_node),
    "--current-os",
    current_os,
    "--current-cpu",
    current_cpu,
  ]
}

group("libarkts") {
  deps = [
    ":compile(${host_toolchain})",
    ":es2panda_lib_copy",
  ]
}

action("libarkts_sdk_copy") {
  script = "./gn/command/copy_libs.py"
  libarkts_source = "//developtools/ace_ets2bundle/ets1.2/libarkts"
  _libarkts_es2panda_node = "$target_out_dir/es2panda.node"
  inputs = [
    libarkts_source,
    _libarkts_es2panda_node
  ]
  args = [
    "--source_path",
    rebase_path(get_path_info(".", "abspath")),
    "--output_path",
    rebase_path("$target_gen_dir"),
    "--root_out_dir",
    rebase_path(root_out_dir),
    "--current-os",
    current_os,
    "--current-cpu",
    current_cpu,
    "--rri",
    "${koala_mr.is_rri}",
  ]
  outputs = [ "$target_gen_dir" ]
  deps = [
    ":libarkts",
    ":es2panda_lib_copy",
  ]
}
