option('node_modules_dir', type : 'string', value : '../node_modules/',
    description : 'path to node_modules')
option('panda_sdk_dir', type : 'string', value : '../node_modules/@panda/sdk/',
    description : 'path to panda sdk')
option('interop_src_dir', type : 'string', value : '../node_modules/@koalaui/interop/src/cpp/',
    description : 'path to interop')
option('lib_name', type : 'string', value : 'es2panda',
    description : 'name of shared library')
