# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (target_os == "") {
    target_os = host_os
}
if (target_cpu == "") {
    target_cpu = host_cpu
}
if (current_cpu == "") {
    current_cpu = target_cpu
}
if (current_os == "") {
    current_os = target_os
}

_shared_binary_target_configs = [ "//gn/config:compiler_defaults" ]
set_defaults("executable") {
    configs = _shared_binary_target_configs
    configs += [ "//gn/config:executable_ldconfig" ]
}
set_defaults("static_library") {
    configs = _shared_binary_target_configs
}
set_defaults("shared_library") {
    configs = _shared_binary_target_configs
}
set_defaults("source_set") {
    configs = _shared_binary_target_configs
}
set_default_toolchain("//gn/toolchain:clang")

koala_mr = {
    root_path = "//."
    scripts_path = "$root_path/gn/script"
    imports_prefix = "$root_path/gn/import"
    ui2abc_path = "$root_path/ui2abc"
    libarkts_path = "$ui2abc_path/libarkts"
    incremental_path = "$root_path/incremental"
    panda_sdk_path = "$incremental_path/tools/panda/node_modules/@panda/sdk"
    es2panda_path = "$panda_sdk_path/ohos_arm64/include/tools/es2panda"
    interop_path = "$root_path/interop"
    is_rri = true
}

host_toolchain = "//gn/toolchain:clang"

is_linux = host_os == "linux" && current_os == "linux" && target_os == "linux"
is_mac = host_os == "mac" && current_os == "mac" && target_os == "mac"